--- a/index.html
+++ b/index.html
@@ -16,5 +16,27 @@
 			<div class="bottom-side"><img alt="" src="./83.jpg"></div>
 		</div>
 	</div>
+	<div>
+		<h1>Naomi</h1>
+		<div>
+			<h3>
+				Le soir seul face à mes pensées j'ouvre ma fenêtre <br>
+				La nuit est tombée une brise viens caresser mon visage <br>
+				Les étoiles luisent et la lune est belle <br>
+				Je regarde le ciel est pense à toi mon ange <br>
+				Pour moi tu es l'être gracieux qui guide mes pas <br>
+				Tu es ma force invisible qui éclaire mon chemin <br>
+				L'ange qui me protège de là-haut <br>
+				Ma source qui coule dans mes veines. <br>
+				Toi tu es ce soleil perçant les nuages de mon ciel. <br>
+				Grâce à toi ma terre est plus fertile, plus vivante. <br>
+				Ta lumière réchauffe mes océans de rêves, <br>
+				Evaporant les obstacles, mes craintes. <br>
+				Tes rayons atteignent mon cœur <br>
+				Et font brûler mon envie folle d'aimer. <br>
+			</h3>
+			<img src="./83.jpg" alt="">
+		</div>
+	</div>
 </body>
 </html>
