--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<meta charset="UTF-8">
-	<title>CSS3 3D cube Animation with image</title>
+	<title>Naomi</title>
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
